--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "CI=false react-scripts build"
+    "build": "react-scripts build",
   },
   "eslintConfig": {
     "extends": [
