--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,14 +14,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.50.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^8.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
     "react-redux": "^9.1.0",
