--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
     "stripe": "^15.3.0"
   }
 }
