--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,11 +30,13 @@
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
@@ -63,6 +65,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "css-loader": "^7.1.2",
+    "sass": "^1.77.7",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0"
   }
 }
